--- a/views/partials/UserFooter.ejs
+++ b/views/partials/UserFooter.ejs
@@ -57,7 +57,7 @@ $(document).ready(function() {
     if (currentPath.includes('/dashboard')) {
         pageTitle.text('Dashboard');
     } else if (currentPath.includes('/plant-identification')) {
-        pageTitle.text('Identification');
+        pageTitle.text('Plant Identification');
     } else if (currentPath.includes('/community')) {
         pageTitle.text('Community');
     } else if (currentPath.includes('/email')) {
