--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -687,9 +687,8 @@ a{
     }
 /*  */
 
-
-/* CHATBOT */
-.chatbot {
+ /* CHATBOT */
+ .chatbot {
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -797,12 +796,12 @@ a{
     background-color: #4a90e2;
     color: white;
     border: none;
-    padding: 15px;
-    border-radius: 50%;
+    padding: 20px;
+    height: 70px;
+    width: 70px;
     cursor: pointer;
     display: none;
 }
-
 /*  */
 
 /* POSTS */
