--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -35,7 +35,6 @@
                 <a href="/plant-identification" class="side-nav-item text-white"><img src="/images/scan-helper.svg" alt=""></a>
                 <a href="/posts" class="side-nav-item text-white"><img src="/images/account-group.svg" alt=""></a>
                 <a href="/email" class="side-nav-item text-white"><img src="/images/email-outline.svg" alt=""></a>
-                <a href="/logout" class="side-nav-item text-white"><img src="/images/logout.svg" alt=""></a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -49,9 +48,6 @@
                             <i class="fas fa-bars" id="menuIcon"></i>
                         </button>
                     </div>
-
-
-                    
                 </div>
                 <div class="d-flex align-items-center">
                     <p class="my-0 mx-3"> <%= name  %> </p>
@@ -113,7 +109,7 @@
                 
             </div>   
 
-            <div class="px-2">
+            <div class="px-2 my-3 px-3">
                 <p id="page-title" class="nexa-black bread-crumbs m-0"></p>
             </div>
 
