--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -110,7 +110,7 @@
             </div>   
 
             <div class="px-2 my-3 px-3">
-                <p id="page-title" class="nexa-black bread-crumbs m-0"></p>
+                <p id="page-title" class="nexa-black bread-crumbs m-0" href=""></p>
             </div>
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
